# people

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
src/: config.rs  lib.rs  log.rs  main.rs  model.rs  test_utils.rs  use_cases.rs
